Fixed excludedList UI element being too big

--- a/client.css
+++ b/client.css
@@ -105,7 +105,7 @@ button
 {
     position: relative;
     width: 12.5vw;
-    height: 50vh;
+    height: 46vh;
     overflow-y: scroll;
     padding: 1vw;
 }
